--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
     --color-info-dark: #7d8da1;
     --color-info-light: #dce1eb;
     --color-dark: #363949;
-    --color-light: rgba(132,139,200,0.18);
+    --color-light: rgba(132, 139, 200, 0.18);
     --color-background: #f6f6f9;
     --color-primary-variant: #111e88;
     --color-dark-variant: #677483;
@@ -18,7 +18,7 @@
     --border-radius-2: 0.8rem;
     --border-radius-3: 1.2rem;
 
-    --box-shadow: 0 2rem 3rem var(var(--color-light))
+    --box-shadow: 0 2rem 3rem var(--color-light);
 }
 
 *{
@@ -80,7 +80,13 @@ small{
     color: var(--color-info-dark);
 }
 p{
-   color: var(--color-dark-variant);
+    color: var(--color-dark-variant);
+}
+.danger{
+    color: var(--color-danger);
+}
+.success{
+    color: var(--color-success);
 }
 b{
     color: var(--color-dark);
@@ -95,9 +101,11 @@ aside .top{
     align-items: center;
     justify-content: space-between;
     margin-top: 1.4rem;
+    text-align: center;
+    position: relative;
 }
 aside .close{
-    display: none;
+    display: none;   
 }
 aside .sidebar{
     background: white;
@@ -109,6 +117,13 @@ aside .sidebar{
 }
 aside h3{
     font-weight: 500;
+}
+aside .logo{
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    width: 100%;
 }
 aside .sidebar a{
     display: flex;
@@ -122,6 +137,7 @@ aside .sidebar a{
 }
 aside .sidebar a span{
     font-size: 1.6rem;
+    transition: all 300ms ease;
 }
 aside .sidebar a:last-child{
     position: absolute;
@@ -140,14 +156,220 @@ aside .sidebar a.active::before{
     height: 100%;
     background: var(--color-primary);
 }
-aside .sidebar a:ho
+aside .sidebar a:hover{
+    color: var(--color-primary);
+}
+aside .sidebar a:hover span{
+    margin-left: 1rem;
+}
+aside .sidebar .message-count{
+    background: var(--color-danger);
+    color: var(--color-white);
+    padding: 2px 8px;
+    border-radius: 6px;
+    font-size: 11px;
+}
 .container{
     display: grid;
     width: 96%;
     margin: 0 auto;
-    gap: 1.8rem;
+    gap: 2.9rem;
     grid-template-columns: 14rem auto 23rem;
 }
-.danger{
-    color: var(--color-danger);
+main{
+    margin-top: 1.4rem;
+}
+main .date{
+    display: inline-block;
+    background: var(--color-light);
+    border-radius: 6px;
+    margin-top: 2rem;
+    padding: 0.5rem 1.6rem
+}
+main .date input[type='date']{
+    background: transparent;
+}
+main .insight{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr );
+    gap: 1.5rem;
+}
+main .insight >div{
+    background: var(--color-white);
+    padding: 0.9rem 2.0rem;
+    align-items: center;
+    border-radius: 10px;
+    margin-top: 1rem;
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+}
+main .insight >div:hover{
+    box-shadow: none;
+
+}
+main .insight >div span{
+    /* background: var(--color-primary); */
+    padding: 0.5rem;
+    border-radius: 50%;
+    font-size: 2rem;
+    color: white;
+}
+main .insight >div.Expenses span{
+    background: var(--color-primary);
+}
+main .insight >div.sales span{
+    background: var(--color-success );
+}
+main .insight >div.Income span {
+    background: var(--color-danger);
+}
+main .insight > div .middle{
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+}
+main .insight h3{
+    margin: 1rem 0 0.6rem;
+    font-size: 0.9rem;
+}
+main .insight .progress{
+    position: relative;
+    width: 92px;
+    height: 92px;
+    border-radius: 50%;
+    margin-left: 2rem;
+}
+main .insight svg{
+    width: 7rem;
+    height: 7rem;
+}
+.primary{
+    color: var(--color-primary);
+}
+main .insight svg circle{
+    fill: none;
+    stroke: var(--color-primary);
+    stroke-width: 14;
+    stroke-linecap: round;
+    transform: translate(5px, 5px);
+    stroke-dasharray: 110;
+    stroke-dashoffset: 90;
+}
+main .insight .sales svg circle{
+    stroke-dashoffset: -40;
+    stroke-dasharray: 200;
+}
+main .insight .Income svg circle{
+    stroke-dashoffset: -20;
+    stroke-dasharray: 200;
+}
+main .insight .Expenses svg circle{
+    stroke-dashoffset: -70;
+    stroke-dasharray: 200;
+}
+main .insight .progress .number{
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+main .insight small{
+    margin-top: 1.7rem;
+    display: block;
+}
+main .recent-order{
+    margin-top: 2.2rem;
+}
+main .recent-order h2{
+    margin-bottom: 0.9rem;
+}
+main .recent-order table{
+    background: var(--color-white);
+    width: 100%;
+    border-radius: var(--card-border-radius);
+    padding: 2.1rem 0.9rem;  
+    text-align: center;
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+}
+main .recent-order table:hover{
+    box-shadow: none;
+}
+main .recent-order td{
+    height: 2.8rem;
+    border-bottom: 1px solid var(--color-light);
+    color: var(--color-info-dark);
+}
+main table tbody tr:last-child td{
+    border: none;
+}
+main a{
+    text-align: center;
+    display: block;
+    margin: 1rem auto;
+
+}
+.right{
+    margin-top: 1.4rem;
+}
+.right .top{
+    display: flex;
+    justify-content: end;
+    gap: 2rem;
+}
+.right .theme-toggler{
+    background: var(--color-light);
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    height: 1.6rem;
+    width: 4.3rem;
+    cursor: pointer;
+    border-radius: var(--border-radius-1);
+}
+.right .theme-toggler span{
+    font-size: 1.2rem;
+    width: 50%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.right .theme-toggler span:active{
+    background: var(--color-primary);
+    color: white;
+    border-radius:var(--border-radius-1) ;
+}
+.right .top .profile{
+    display: flex;
+    gap: 2rem;
+    text-align: right;
+}
+.right .recent-updates h2{
+    margin-bottom: 0.8rem;
+}
+.right .recent-updates{
+    background: var(--color-white);
+    border-radius: var(--card-border-radius);
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+    padding: 2.0rem 1.6rem;
+}
+.right .recent-updates:hover{
+    box-shadow: none;
+}
+.right .recent-updates .update{
+    display: grid;
+    grid-template-columns: 2.6rem auto ;
+    gap: 1.3rem;
+    margin-bottom: 1.8rem;
+
+}
+.right .recent-text {
+    margin-top: 2rem;
+    margin-bottom: 2em;
 }
