feat: update on design

--- a/style.css
+++ b/style.css
@@ -83,7 +83,8 @@ p{
     color: var(--color-dark-variant);
 }
 .danger{
-    color: var(--color-danger);
+    color: var(--color-danger) !important;
+    /* background-color: var(--color-danger); */
 }
 .success{
     color: var(--color-success);
@@ -372,4 +373,105 @@ main a{
 .right .recent-text {
     margin-top: 2rem;
     margin-bottom: 2em;
+}
+.right .sales-analytics{
+    margin-top: 2rem;
+}
+.right .sales-analytics h3{
+    margin-bottom: 1rem;
+}
+.right .sales-analytics .item{
+    background: var(--color-white);
+    display: flex;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 0.9rem;
+    border-radius: var(--border-radius-3);
+    box-shadow: var(--box-shadow);
+    transition: all 300ms ease;
+    padding: 1.2rem 0.4rem;
+}
+.right .sales-analytics .item:hover{
+    box-shadow: none;
+}
+.right .sales-analytics .item .right{
+    display: flex;
+    justify-content: space-between;
+    align-items: start;
+    margin: 0;
+    width: 100%;
+}
+.right .sales-analytics .item .icon{
+    padding: 0.6rem;
+    color: var(--color-white);
+    border-radius: 50%;
+    background: var(--color-primary);
+    display: flex;
+}
+
+.right .sales-analytics .item.offline .icon{
+    background: var(--color-danger);
+}
+.right .sales-analytics .item.customers .icon{
+    background: var(--color-success);
+}
+.right .sales-analytics .add-product{
+    background-color: transparent;
+    border: 2px dashed var(--color-primary);
+    color: var(--color-primary);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+.right .sales-analytics .add-product div{
+    display: flex;
+    align-items: center;
+    gap: 0.5rem;
+}
+.right .sales-analytics .add-product div h3{
+    font-weight: 500;
+}
+@media screen and (max-width: 1200px) {
+    .container{
+        width: 94%;
+        grid-template-columns: 7rem auto 23rem;
+    }
+    aside .logo h2{
+        
+    }
+    aside .sidebar{
+        height:50vh;
+    }
+    aside .sidebar h3{
+        display: none;
+    }
+    aside .sidebar a{
+        width: 5.4rem;
+    }
+    aside .sidebar a:last-child{
+        position: relative;
+        margin-top: 1.8rem;
+    }
+    main .insight{
+        grid-template-columns: 1fr;
+        gap: 0;
+    }
+    main .recent-order{
+        width: 94%;
+        position: absolute;
+        left: 50%;
+        transform: translateX(-50%);
+        margin: 5rem 0 0 0.8rem;
+    }
+    main .recent-order table{
+        width: 84vw;
+    }
+    main table thead tr th:last-child,
+    main table thead tr th:first-child{
+        display: none;
+    }
+    main table thead tr td:last-child,
+    main table thead tr td:first-child{
+        display: none;
+    }
 }
